--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <audio autoplay="autoplay"><source src="../assets/elevator-music.mp3" type="audio/mpeg" autoplay></audio>
   <app-root>Loading...</app-root>
 </body>
 </html>
