--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,12 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
 </head>
 <body>
   <audio autoplay="autoplay"><source src="../assets/elevator-music.mp3" type="audio/mpeg" autoplay></audio>
-  <app-root>Loading...</app-root>
+  <div class="container">
+    <app-root>Loading...</app-root>
+  </div>
 </body>
 </html>
